tests/reference/asr-index_non_integer_subarray3-a701624.stderr
semantic error: Array index must be of type integer
 --> tests/errors/index_non_integer_subarray3.f90:4:16
  |
4 |     print *, x(1.1)
  |                ^^^ 
